# gimp-refocus-plugin

./: ChangeLog  Makefile.am  README.md  configure.ac  configure.in  mkinstalldirs
.github/workflows/: main.yml
doc/: Makefile.am  doc.xml  help.xml  install-inc.xml  install.xml  remove-links.xsl  using-inc.xml  webindex.html
lib/: Makefile.am  dgemm.c  endfile.c  err.c  fmt.c  ilaenv.c  lsame.c  open.c  sfe.c  wref.c  wrtfmt.c  wsfe.c
src/: Makefile.am  bdclosure.c  bdclosure.h  conv.c  conv.h  dummy-plugin.c  fwlapack.c  fwlapack.h  gimppreview.c  gimppreview.h  matrix.c  matrix.h  prevman.c  prevman.h  refocus.c  refocus.h  test-matrix.c  tilebuf.c  tilebuf.h  util.c  util.h
