dnl Process this file with autoconf to produce a configure script.

AC_INIT([refocus],[0.9.0])
AC_CONFIG_SRCDIR(README)
AM_INIT_AUTOMAKE

AC_PROG_CC

AC_CANONICAL_HOST

AC_MSG_CHECKING([for some Win32 platform])
case "$host" in
  *-*-mingw*|*-*-cygwin*)
    platform_win32=yes
    ;;
  *)
    platform_win32=no
    ;;
esac
AC_MSG_RESULT([$platform_win32])
AM_CONDITIONAL(PLATFORM_WIN32, test "$platform_win32" = "yes")

AC_MSG_CHECKING([for native Win32])
case "$host" in
  *-*-mingw*)
    os_win32=yes
    PATHSEP=';'
    ;;
  *)
    os_win32=no
    PATHSEP=':'
    ;;
esac
AC_MSG_RESULT([$os_win32])
AC_SUBST(PATHSEP)
AM_CONDITIONAL(OS_WIN32, test "$os_win32" = "yes")

if test "$os_win32" = "yes"; then
  AC_CHECK_PROG(ms_librarian, lib.exe, yes, no)
fi
AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)

AC_HEADER_STDC([])
AC_PROG_RANLIB

BUNDLED_LAPACK_LIB_DIR='${top_srcdir}/lib'
AC_SUBST(BUNDLED_LAPACK_LIB_DIR)

have_atlas=no
AC_ARG_WITH(lapack-libs, [  --with-lapack-libs=LIBS ])
if test "x$with_lapack_libs" = "x" ; then
  LAPACK_LIBS='-L${top_srcdir}/lib -latlas -lcblas -llapack'
else
  LAPACK_LIBS="$with_lapack_libs"
  have_atlas=yes
fi
AC_SUBST(LAPACK_LIBS)
AM_CONDITIONAL(HAVE_ATLAS, test x${have_atlas} = xyes)

AC_ARG_WITH(lapack-includes, [  --with-lapack-includes=INCLUDES ])
if test "x$with_lapack_includes" = "x" ; then
  LAPACK_INCLUDES='-I ${top_srcdir}/lib'
else
  LAPACK_INCLUDES="$with_lapack_includes"
fi
AC_SUBST(LAPACK_INCLUDES)

AM_PATH_GIMP_2_0(2.0.0)
AM_PATH_GTK_2_0(2.0.0)
AM_PATH_GLIB_2_0(2.0.0)

dnl Ensure MSVC-compatible struct packing convention is used when
dnl compiling for Win32 with gcc. GTK+ uses this convention, so we must, too.
dnl What flag to depends on gcc version: gcc3 uses "-mms-bitfields", while
dnl gcc2 uses "-fnative-struct".
if test x"$os_win32" = xyes; then
  if test x"$GCC" = xyes; then
    msnative_struct=''
    AC_MSG_CHECKING([how to get MSVC-compatible struct packing])
    if test -z "$ac_cv_prog_CC"; then
      our_gcc="$CC"
    else
      our_gcc="$ac_cv_prog_CC"
    fi
    case `$our_gcc --version | sed -e 's,\..*,.,' -e q` in
      2.)
	if $our_gcc -v --help 2>/dev/null | grep fnative-struct >/dev/null; then
	  msnative_struct='-fnative-struct'
	fi
	;;
      *)
	if $our_gcc -v --help 2>/dev/null | grep ms-bitfields >/dev/null; then
	  msnative_struct='-mms-bitfields'
	fi
	;;
    esac
    if test x"$msnative_struct" = x ; then
      AC_MSG_RESULT([no way])
      AC_MSG_WARN([produced libraries will be incompatible with prebuilt GTK+ DLLs])
    else
      CFLAGS="$CFLAGS $msnative_struct"
      AC_MSG_RESULT([${msnative_struct}])
    fi
  fi
fi

# This is a check for gtk-doc which you can insert into your configure.in.
# You shouldn't need to change it at all.


##################################################
# Check for gtk-doc.
##################################################

AC_ARG_WITH(html-dir, [  --with-html-dir=PATH path to installed docs ])

if test "x$with_html_dir" = "x" ; then
  HTML_DIR='${datadir}/gtk-doc/html'
else
  HTML_DIR=$with_html_dir
fi

AC_SUBST(HTML_DIR)

AC_CHECK_PROG(GTKDOC, gtkdoc-mkdb, true, false)

gtk_doc_min_version=0.6
if $GTKDOC ; then 
    gtk_doc_version=`gtkdoc-mkdb --version`
    AC_MSG_CHECKING([gtk-doc version ($gtk_doc_version) >= $gtk_doc_min_version])
    if perl <<EOF ; then
      exit (("$gtk_doc_version" =~ /^[[0-9]]+\.[[0-9]]+$/) &&
            ("$gtk_doc_version" >= "$gtk_doc_min_version") ? 0 : 1);
EOF
      AC_MSG_RESULT(yes)
   else
      AC_MSG_RESULT(no)
      GTKDOC=false
   fi
fi

dnl Let people enable the gtk-doc stuff.
AC_ARG_ENABLE(gtk-doc, [  --enable-gtk-doc        Use gtk-doc to build documentation [default=no]], enable_gtk_doc="$enableval", enable_gtk_doc=no)

if test x$enable_gtk_doc = xyes ; then
  if test x$GTKDOC = xtrue ; then
    enable_gtk_doc=yes
  else
    enable_gtk_doc=no 
  fi
fi

AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
# End of gtk-doc stuff.

AC_ARG_ENABLE(debug, [  --enable-debug          Show debugging output [default=no]], enable_debug=yes, enable_debug=no)

if test x$enable_debug = xyes ; then
   AC_DEFINE(RF_DEBUG)
   AC_DEFINE(PREVIEW_DEBUG)
fi

#Check if erf is defined in the mathlibrary
AC_CHECK_LIB(m, erf, AC_DEFINE(HAVE_ERF))

AC_CONFIG_FILES([Makefile src/Makefile lib/Makefile doc/Makefile gtk-doc/Makefile ])
AC_OUTPUT
